feat: simplify stream operations in OpenSearchSteps by replacing collect with toList